--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="gpsbutton">Get Location</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
